ajustes del back para regractor gui
